--- a/react-router/index.html
+++ b/react-router/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta charset="UTF-8"/>
-    <title>지뢰찾기</title>
+    <title></title>
     <style>
         table {
             border-collapse: collapse;
